[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/sprites/hud/life_under.png" type="Texture" id=1]
[ext_resource path="res://assets/sprites/hud/mana_bar.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/hud/mana_under.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/hud/portrait_frame.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/hud/life_bar.png" type="Texture" id=5]
[ext_resource path="res://scripts/gui/player_hud.gd" type="Script" id=6]
[ext_resource path="res://assets/sprites/player/portrait/generic_portrait.png" type="Texture" id=7]

[node name="player_hud" type="Control"]
margin_right = 254.0
margin_bottom = 83.0
rect_min_size = Vector2( 254, 83 )
rect_scale = Vector2( 2, 2 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}
_portrait = ExtResource( 7 )

[node name="portrait_frame" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="player_portrait" type="TextureRect" parent="portrait_frame"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -25.5
margin_top = -30.5
margin_right = 25.5
margin_bottom = 30.5

[node name="life_bar" type="TextureProgress" parent="."]
margin_left = 70.4251
margin_top = 8.82941
margin_right = 254.425
margin_bottom = 48.8294
max_value = 1.0
step = 0.0
value = 1.0
texture_under = ExtResource( 1 )
texture_progress = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="mana_bar" type="TextureProgress" parent="."]
margin_left = 70.1831
margin_top = 40.8819
margin_right = 196.183
margin_bottom = 80.8819
max_value = 1.0
step = 0.0
value = 1.0
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]
